# sidebutton-harbor-agent

./: .gitignore  README.md  pyproject.toml
ci/: ci.yml
docs/: RUNBOOK.md  arm-params.cold.example.json  arm-params.example.json  arm-params.schema.json  arm-params.submission.example.json  arm-params.submission.schema.json
src/sidebutton_harbor_agent/: __init__.py  agent.py  dryrun.py
src/sidebutton_harbor_agent/config/: CLAUDE.md
src/sidebutton_harbor_agent/packs/: README.md
tests/: conftest.py  test_contract.py  test_dryrun.py  test_packs.py  test_param_plumbing.py  test_verify_loop.py
