[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidebutton-harbor-agent"
version = "0.1.0"
description = "SideButton agent adapter for the Harbor harness (Terminal-Bench 2.1)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "SideButton" }]
keywords = ["harbor", "terminal-bench", "sidebutton", "agent", "claude-code"]
dependencies = [
    # Pinned to the harbor minor the adapter is coupled to (subclasses ClaudeCode).
    "harbor>=0.20.0,<0.21.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/sidebutton/sidebutton-harbor-agent"

[project.scripts]
sidebutton-harbor-agent-dryrun = "sidebutton_harbor_agent.dryrun:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sidebutton_harbor_agent"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]
